--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Navbar content -->
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="http://www.curocom.com/images/logo/top_logo.png" alt="" width="150" height="24" class="d-inline-block align-text-top">
+              <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="" height="25" class="d-inline-block align-text-top">
             </a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -137,11 +137,71 @@
                           </tr>
                         </tbody>
                       </table>
+					  <div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+       느낀 점 
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+	  내 주도적으로 개발할 수 있다는 점이 좋았고, 윈폼 디자인에 신경을 썼습니다.
+	  </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        배운 점
+      </button>
+    </h2>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        SqlConnection 클래스로 데이터베이스를 연결하고, 데이터를 끌고올 때는 SqlCommand 클래스를 이용하였습니다. Insert, Update, Delete 쿼리를 이용할 때는 ExecuteNonQuery 메서드를. Select를 할 때는 ExecuteReader 메서드를 이용하였습니다.
+        <br/><br/>
+        Main창은 MDI 설정으로 하여, 메인 폼 안에 자식 폼이 들어갈 수 있게 해주었습니다.
+        활성화된 자식 폼은 최대 크기로 보여줍니다.
+        <br/><br/>
+        학원 실습용 데스크탑과 개인 노트북에 SVN을 설치 했습니다. 근데 한쪽 컴퓨터에서 코딩하고 나서 COMMIT을 안 했더니, 충돌나는 현상이 발생 했습니다. 그럴 때는 ZIP 파일로 압축해서 백업을 하고 REVERT를 했습니다.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+        성공한 점
+      </button>
+    </h2>
+    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        시리얼포트 (RS232)케이블 바코드를 연결했다는 점이 뿌듯했습니다. GetPortNames() 메서드로 포트를 검색되게 하였으며, 그 외 나머지 값(통신속도BaudRate 등)은 고정했습니다. 
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingFour">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+        실패한 점
+      </button>
+    </h2>
+    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        주제가 '방문객'이기 때문에 'BOM' 메뉴를 넣을 필요는 없었으나, BOM 교육을 받았으므로 한 번 적용시켜 보았습니다. 한편으로는 BOM을 섬세하게 만들지 못한 것이 아쉽습니다.
+        <br/><br/>
+        정전개: 완제품 가격이 같아도 원자재 가격이 다를 수 있다.
+        <br/>
+        역전개: 특정 Lot번호 부품이 불량날 경우 몰수하기 위함.
+      </div>
+    </div>
+  </div>
+</div>
                     </div>
                     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                      <h2>침대생산 WEB(ASP.NET)</h2>
+                      <h2>침대 WEB(ASP.NET)</h2>
                       <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
+                          <!---->
                           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
                           <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -174,10 +234,60 @@
                           <span class="visually-hidden">Next</span>
                         </button>
                       </div>
+					  </div>
                       <hr/>
-                      <p>(저를 제외한 조원들만 Winform 사용)</p>
-                      
-                    </div>
+                      <div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        느낀 점
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        ASP.NET을 1개월 밖에 안 배웠지만, 최종 프로젝트에서 혼자 웹을 담당하였습니다.</br></br>
+        초반에 팀원들과 회외할 때마다 개발 흐름도가 변경되서 개발 기간이 늦춰졌으나, 팀원들과 협력하여 무사히 개발 기간에 맞춰 완성할 수 있었습니다.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        배운 점
+      </button>
+    </h2>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        ASP.NET의 MVC를 써보았습니다. Model에서는 데이터를 처리했으며, View에는 Bootstrap 기반의 AdminLTE과 Razor구문을 사용하였으며, Controller에서 Model과 View를 연결해주고 ViewData, Session값을 넘겨 주었습니다.
+        <br/>
+        SqlCommand 클래스의 CommandText메서드로 저장 프로시저를 끌고 왔습니다.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+        성공한 점
+      </button>
+    </h2>
+    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        사용자가 입력한 기간에 따라, 동적쿼리로 데이터를 끌고 왔습니다.
+      </div>
+    </div>
+  </div>
+<div class="accordion-item">
+  <h2 class="accordion-header" id="flush-headingFour">
+    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+      실패한 점
+    </button>
+  </h2>
+  <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+    <div class="accordion-body">
+      ajax를 사용하지 않았기 때문에, 웹 페이지 전체가 다시 로딩되는 단점이 있습니다.
+    </div>
+  </div>
+</div>
                     </div>
                 </div>
               </div>
